<resources>

    <string name="app_name">校车查询</string>
    <string name="org_name">ONLINE</string>
    <string name="place_tip">您的位置：</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bus_start">起点</string>
    <string name="bus_end">终点</string>
    <string name="bus_time">时间</string>
    <string name="bus_title">校车查询系统</string>
    <string name="time_work">工作日</string>
    <string name="time_nowork">非工作日</string>
    <string name="start_station">起始站</string>
    <string name="end_station">终点站</string>
    <string name="search">搜索</string>
    <string name="time_start">起始时间</string>
    <string name="remark">备注</string>
    <string name="update_title">正在更新</string>
    <string name="settings">设置与帮助</string>
    <string name="about">关于</string>
    <string name="waiting_update">正在检查更新\n请稍后</string>
    <string name="copyright">Copyright © 2012 山东大学 学生在线. All Rights Reserved.</string>
    
     <string-array
         name="bus_start_array"
         >
         <item>中心\n校区</item>
         <item>兴隆山\n校区</item>
         <item>千佛山\n校区</item>
         <item>趵突泉\n校区</item>
         <item>软件园\n校区</item>
         <item>洪家楼\n校区</item>
         <item>三宿舍 \n</item>
         <item>五宿舍\n</item>
         <item>南山\n小区</item>
         <item>马家庄\n</item>
         <item>舜玉\n小区</item>
         <item>燕山\n宿舍</item>
         <item>阳光\n舜城</item>
         <item>二宿舍\n</item>
         <item>燕山\n立交北</item>
         <item>文化路\n</item>
         <item>社会\n科学院</item>
     </string-array>

     
     <string name="start_palce_xing">兴隆山\n校区</string>
     <string name="start_palce_zhong">中心\n校区</string>
     <string name="start_palce_qian">千佛山\n校区</string>
     <string name="start_palce_bao">趵突泉\n校区</string>
     <string name="start_palce_hong">洪家楼\n校区</string>
     <string name="start_palce_ruan">软件园\n校区</string>
     
     <string name="start_palce_san">三宿舍\n</string>
     <string name="start_palce_wu">五宿舍\n</string>
     <string name="start_palce_nan">南山\n小区</string>
     <string name="start_palce_ma">马家庄\n</string>
     <string name="start_palce_shun">舜玉\n小区</string>
     <string name="start_palce_yan">燕山\n宿舍</string>
     
     <string name="start_palce_yang">阳光\n舜城</string>
     <string name="start_palce_er">二宿舍\n</string>
     <string name="start_palce_li">燕山\n立交北</string>
     <string name="start_palce_wen">文化路\n</string>
     <string name="start_palce_she">社会\n科学院</string>
     
     <string name="schedule_tip_summer">[夏季时刻表]</string>
     <string name="schedule_tip_winter">[冬季时刻表]</string>
     <string name="choose_des_tip">目的地</string>
     
     <string name="detail_start_time">发车时间</string>
     <string name="detail_start_place">发车地点</string>
     <string name="detail_between_place">途经地点</string>
     <string name="detail_end_place">终点站</string>
     <string name="detail_remark">备注</string>
     
     <string name="config_app_update_url">http://users10.jabry.com/sheling2011/testapk/update_app.xml</string>
     <string name="config_db_update_url">http://users10.jabry.com/sheling2011/testapk/update_db.xml</string>
     
     <string name="btn_cancle">以后再说</string>
     <string name="btn_download">去下载>></string>
     <string name="update_warn">更新提示</string>
     <string name="search_no_found">抱歉，亲~~\n真没找到您所需的车次</string>
</resources>

