<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
	<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"   
     >
    	<ImageView
    	    android:id="@+id/sdu_logo"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    />
    	<TextView 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/bus_title"
    	    android:layout_centerHorizontal="true"
    	    android:textSize="25dp"
    	    />
    	<ImageView
    	    android:id="@+id/sdu_bus_img" 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"
    	    />
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
    	<RelativeLayout 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="5dp"
    	    android:paddingLeft="3dp"
    	    android:paddingRight="3dp"
    	    >
    	    <TextView 
    	        android:id="@+id/start_p"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/bus_start"
    	        android:textSize="15dp"
    	        android:gravity="center"
    	        android:layout_alignParentLeft="true"
    	        />
    	    <Spinner 
    	        android:id="@+id/start_spinner"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_toRightOf="@id/start_p"
    	        android:entries="@array/bus_start_array"
    	        />
    	    <ImageView 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_centerHorizontal="true"
    	        />
    	    <Spinner 
    	        android:id="@+id/end_spinner"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentRight="true"
    	        android:entries="@array/bus_start_array"
    	        />
    	     <TextView 
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/bus_end"
    	        android:textSize="15dp"
    	        android:gravity="center"
    	        android:layout_toLeftOf="@id/end_spinner"
    	        />
    	</RelativeLayout>
    	<RelativeLayout 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="3dp"    
    	    >
    	<RadioGroup 
    	    android:id="@+id/time_group"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:orientation="horizontal"
    	    >
    	    <RadioButton 
    	        android:id="@+id/bus_time_work"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/time_work"
    	        android:checked="true"
    	        />
    	    <RadioButton 
    	        android:id="@+id/bus_time_nowork"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/time_nowork"
    	        />
    	</RadioGroup>
    	<ImageView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:id="@+id/bus_searchbutton"
    	    android:layout_alignParentRight="true"
    	    >	    
    	</ImageView>
    	</RelativeLayout>
    	
    </LinearLayout>
    	<RelativeLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"  
	            >
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/start_station"
	                android:textSize="20dp"
	                android:paddingLeft="30dp"
	                android:layout_alignParentLeft="true"
	                />
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerHorizontal="true"     
	                />
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="20dp"
	                android:text="@string/end_station"
	                android:paddingRight="30dp"
	                android:layout_alignParentRight="true"
	                />
	        </RelativeLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	        
	        <ListView 
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            ></ListView>
	    </LinearLayout>

</LinearLayout>
