<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TableLayout
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:stretchColumns="*"
        >
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent" 
            android:layout_weight="1.0"
            >
            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:id="@+id/select_from_tv1"
        		android:background="@color/main_color_blue"
                android:layout_height="fill_parent"
                android:layout_width="@dimen/cell_width"
                android:layout_marginLeft="@dimen/cell_margin_left"
                android:layout_marginRight="@dimen/cell_margin_center"
                android:layout_marginBottom="@dimen/cell_margin_bottom"
                android:text="@string/start_palce_xing"
                android:gravity="center"
                />
              <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:id="@+id/select_from_tv2"
        		android:background="@color/main_color_blue"
                android:layout_height="fill_parent"
                android:layout_width="@dimen/cell_width"
                android:layout_marginRight="@dimen/cell_margin_left"
                android:layout_marginBottom="@dimen/cell_margin_bottom"
                android:text="@string/start_palce_zhong"
                android:gravity="center"
                />
        </TableRow>
        
         <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_weight="1.0" 
            >
            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:id="@+id/select_from_tv3"
        		android:background="@color/main_color_blue"
                android:layout_height="fill_parent"
                android:layout_width="@dimen/cell_width"
                android:layout_marginLeft="@dimen/cell_margin_left"
                android:layout_marginRight="@dimen/cell_margin_center"
                android:layout_marginTop="@dimen/cell_margin_top"
                android:layout_marginBottom="@dimen/cell_margin_bottom"
                android:text="@string/start_palce_bao"
                android:gravity="center"
                />
              <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:id="@+id/select_from_tv4"
        		android:background="@color/main_color_blue"
                android:layout_height="fill_parent"
                android:layout_width="@dimen/cell_width"
                android:layout_marginRight="@dimen/cell_margin_left"
                android:layout_marginTop="@dimen/cell_margin_top"
                android:layout_marginBottom="@dimen/cell_margin_bottom"
                android:text="@string/start_palce_qian"
                android:gravity="center"
                />
        </TableRow>
        
          <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_weight="1.0" 
            >
            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:id="@+id/select_from_tv5"
        		android:background="@color/main_color_blue"
                android:layout_height="fill_parent"
                android:layout_width="@dimen/cell_width"
                android:layout_marginLeft="@dimen/cell_margin_left"
                android:layout_marginRight="@dimen/cell_margin_center"
                android:layout_marginTop="@dimen/cell_margin_top"
                android:text="@string/start_palce_hong"
                android:gravity="center"
                />
              <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#fff"
                android:id="@+id/select_from_tv6"
        		android:background="@color/main_color_blue"
                android:layout_height="fill_parent"
                android:layout_width="@dimen/cell_width"
                android:layout_marginRight="@dimen/cell_margin_left"
                android:layout_marginTop="@dimen/cell_margin_top"
                android:text="@string/start_palce_ruan"
                android:gravity="center"
                />
        </TableRow>
        
    </TableLayout>
    
</RelativeLayout>