<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/search_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/search_top_height"
        android:orientation="horizontal"
        >
            <TextView
            android:layout_height="@dimen/search_top_text_height"
            android:layout_width="fill_parent"
            android:textColor="@color/main_color_blue"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_large"
            android:text="@string/schedule_tip_summer"
            android:layout_weight="1.0"
            android:gravity="center"
            />
            <TextView
             android:id="@+id/search_layout_weekday"
            android:layout_height="@dimen/search_top_text_height"
            android:layout_width="fill_parent"
            android:background="@color/main_color_blue"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:text="@string/time_work"
            android:textColor="@color/main_color_light"
            android:gravity="center"
            android:layout_weight="1.0"
            android:textSize="@dimen/choose_weekday_text_size"
            />
        </LinearLayout>
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_height="@dimen/search_top_text_height"
            android:layout_width="fill_parent"
            >
            <TextView 
                android:id="@+id/station_from"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/start_station"
                android:textSize="20sp"
                android:layout_weight="1.0"
                />
            <ImageView 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="#cccccc"
                />
            <TextView 
                android:id="@+id/station_end"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/end_station"
                android:textSize="20sp"
                android:gravity="center"
                />
            
        </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:padding="@dimen/padding_xlarge"
        >
        <ListView
            android:id="@+id/search_layout_listview"
        	android:background="@drawable/bg"
            style="@style/ListView.style.Main"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            />
    </LinearLayout>

</LinearLayout>