<?xml version="1.0" encoding="utf-8"?>
    
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    >
	    <TableRow
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent" 
	        >
	        <TextView
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.4"
	             android:layout_margin="@dimen/padding_medium"
	             android:paddingRight="@dimen/padding_large"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:text="@string/detail_start_time"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	        <TextView
	            android:id="@+id/detail_layout_from_time"
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.6"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:layout_margin="@dimen/padding_medium"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	    </TableRow>
	    
	    <TableRow
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent" 
	        >
	        <TextView
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.4"
	             android:layout_margin="@dimen/padding_medium"
	             android:paddingRight="@dimen/padding_large"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:text="@string/detail_start_place"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	        <TextView
	            android:id="@+id/detail_layout_from_place"
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.6"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:layout_margin="@dimen/padding_medium"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	    </TableRow>
	    
	    <TableRow
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent" 
	        >
	        <TextView
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.4"
	             android:layout_margin="@dimen/padding_medium"
	             android:paddingRight="@dimen/padding_large"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:text="@string/detail_between_place"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	        <TextView
	            android:id="@+id/detail_layout_between_place"
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.6"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:layout_margin="@dimen/padding_medium"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	    </TableRow>
	    
	    <TableRow
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent" 
	        >
	        <TextView
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.4"
	             android:layout_margin="@dimen/padding_medium"
	             android:paddingRight="@dimen/padding_large"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:text="@string/detail_end_place"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	        <TextView
	            android:id="@+id/detail_layout_to_place"
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.6"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:layout_margin="@dimen/padding_medium"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	    </TableRow>
	    
	    <TableRow
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent" 
	        >
	        <TextView
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.4"
	             android:layout_margin="@dimen/padding_medium"
	             android:paddingRight="@dimen/padding_large"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:text="@string/detail_remark"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	        <TextView
	            android:id="@+id/detail_layout_remark"
	            android:layout_height="40dp"
	            android:layout_width="0dp"
	             android:layout_weight="0.6"
	             android:gravity="center"
	             android:layout_gravity="center"
	             android:layout_margin="@dimen/padding_medium"
	             android:textSize="@dimen/detail_text_size"
	             android:textColor="@color/main_color_light"
	            />
	    </TableRow>
	</TableLayout>
	<!-- 
	        <TextView
	            android:layout_width="100dp"
	            android:layout_height="50dp"
	            android:background="@color/main_color_blue"
	            android:layout_gravity="center_horizontal"
	           />
	  -->