<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_01"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/select_from_layout_top"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp" 
        android:background="@drawable/bg_title_01"
        >
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Large"
             
            />
        
        <ImageView
            android:id="@+id/change_bg_iv"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_changetheme" 
            />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/select_from_layout_place_tip"
        android:layout_below="@id/select_from_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:paddingTop="@dimen/padding_medium" 
        android:paddingLeft="@dimen/padding_xlarge"
        >
        
        <ImageView
            android:id="@+id/iv_place_tip"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_place_tip_01" 
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/place_tip"
            android:textColor="#99000000"
            android:gravity="bottom"
            android:textAppearance="@android:style/TextAppearance.Medium"
             
            />
    </LinearLayout>
    
    
    <RelativeLayout
        android:id="@+id/select_from_layout_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="40dp" 
        android:background="@drawable/bg_bottom_01"
        >
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/org_name"
            android:textAppearance="@android:style/TextAppearance.Large"
             
            />
        
        <ImageView
            android:id="@+id/settings"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:src="@drawable/ic_settings" 
            />
    </RelativeLayout>
    
	    
	<RelativeLayout
	    android:id="@+id/select_from_layout_ivs"
	    android:layout_above="@id/select_from_layout_bottom"
	    android:layout_height="25dp"
	    android:layout_width="fill_parent"
	    >
        
	    <ImageView
	        android:id="@+id/select_from_layout_iv2"
	        android:layout_height="15dp"
	        android:layout_width="15dp"
	        android:layout_centerInParent="true" 
	        android:src="@drawable/point_normal_01"
	        />	        
	    <ImageView
	        android:id="@+id/select_from_layout_iv1"
	        android:layout_toLeftOf="@id/select_from_layout_iv2"
	        android:layout_centerVertical="true"
	        android:layout_height="15dp"
	        android:layout_width="15dp" 
	        android:src="@drawable/point_selected_01"
	        />
	    <ImageView
	        android:id="@+id/select_from_layout_iv3"
	        android:layout_toRightOf="@id/select_from_layout_iv2"
	        android:layout_centerVertical="true"
	        android:layout_height="15dp"
	        android:layout_width="15dp" 
	        android:src="@drawable/point_normal_01"
	        />
	    
	    
	</RelativeLayout>
	
	
	<android.support.v4.view.ViewPager
	    android:layout_below="@id/select_from_layout_place_tip"
	    android:layout_above="@id/select_from_layout_ivs"
	    android:id="@+id/select_from_layout_viewpager"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    />
	
</RelativeLayout>